Fix context menu overflowing elements

--- a/skin/sass/skin.sass
+++ b/skin/sass/skin.sass
@@ -435,6 +435,9 @@
     width: auto
     right: auto
     bottom: auto !important
+    display: none
+    &.fp-active
+      display: block
     a, strong
       text-align: left
       color: #fff
